# talkteach-asr

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile.sota  Makefile  OVERALL.md  README.md  SECURITY.md  bitbucket-pipelines.yml  opencode.jsonc  package-lock.json  package.json  setup.sh
.claude/: settings.json
.cursor/rules/: kaizen.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  kaizen-gate.yml  osv-scan.yml  release.yml
.harness/: INVARIANTS.md  config.json  constitution.md
.harness/adapters/: claude.template.md  codex.template.md  copilot.template.md  cursor.template.md  opencode.template.md
.harness/ci/: kaizen-gate.yml
.harness/gates/: core.gates.json
.harness/hooks/: pre-commit  pre-push
.harness/memory/: conventions.md  glossary.md  memory.md  project.md  rules.md  user.md
.harness/reference/: failure-modes.md
.harness/scripts/: doctor.mjs  guard.mjs  memory-capture.mjs  next-phase-gate.mjs  pre-commit.mjs  pre-push.mjs  scaffold.mjs  verify.mjs
.harness/security/: .secrets.baseline  README.md  allowlist.yaml
.harness/subagents/: adversarial-reviewer.md  executor.md  orchestrator.md  reviewer.md  slopchecker.md  verifier.md
backend/: pyproject.toml
backend/talkteach/: __init__.py  app.py  benchmark.py  cli.py  config.py  selftest.py
backend/talkteach/audio/: __init__.py  align.py  augment.py  decode.py  denoise.py  quality.py  vad.py
backend/talkteach/data/: __init__.py  import_manifest.py  project.py  schema.sql
backend/talkteach/director/: __init__.py  active_learning.py  hardware.py  language.py  plan_config.py  policy.py  types.py
backend/talkteach/engines/: __init__.py  _train_common.py  _wav2vec2_train.py  _whisper_train.py  base.py  nemo_rnnt.py  vocab.py  wav2vec2_ctc.py  whisper_lora.py
backend/talkteach/eval/: __init__.py  report.py
backend/talkteach/obs/: __init__.py  experiment.py  experiment_db.py  logging.py  sweep_runner.py
backend/talkteach/prompts/: __init__.py
backend/talkteach/reliability/: __init__.py  guardrails.py  preflight.py
backend/talkteach/sota/: __init__.py  datasets.py  domains.py  harness.py  report.py  rescore.py  scoring.py
backend/talkteach/transcript/: __init__.py  decode.py  longform.py  punctuate.py  subtitles.py
backend/talkteach/tts/: __init__.py  base.py  dataset.py  espeak.py  piper.py  pocket.py
backend/tests/: conftest.py  test_api.py  test_audio.py  test_audio_pipeline.py  test_augment.py  test_benchmark_scoreboard.py  test_cli.py  test_data.py  test_dataset_import.py  test_director.py  test_durability.py  test_e2e_benchmark.py  test_engines.py  test_eval_report.py  test_experiment.py  test_integration_train.py  test_p2p3.py  test_preflight.py  test_sota_scoring.py  test_transcript.py  test_tts.py  test_vocab.py  test_whisper_train.py
benchmarks/: REPORT.md  full.yaml  quick.yaml
docs/: ACCESSIBILITY.md  ALIGNMENT.md  AUDIO_PIPELINE.md  BUNDLING.md  CALIBRATION.md  CLOUD_FALLBACK.md  COMPETITIVE_GAPS.md  DENOISE.md  DEPENDENCIES.md  DIARIZATION.md  ENGINES.md  EXPORT.md  FORMATS.md  I18N.md  LANDSCAPE.md  LEARNINGS.md  MASCOT.md  MODEL_PACKS.md  MULTIPROJECT.md  PHASE0_STATUS.md  PLAN.md  PROMPTS.md  README.md  RELEASING.md  ROADMAP.md  ROADMAP_STATUS.md  SELFTEST.md  SIDECAR.md
docs/architecture/: DECISIONS.md  PLAN.md
docs/assessment/: 2026-07-06.md
docs/errors/: INC-001-wer-normalization-punctuation.md  INC-002-librichspeech-transcript-parsing.md  INDEX.md  INS-001-lora-finetune-degrades-in-domain-wer.md  INS-002-quality-gate-snr-saturates-on-broadband-noise.md
docs/features/: MULTIPROJECT.md  SELFTEST.md
docs/learning-loops/: AI_WORKFLOWS.md  CALIBRATION_LOOP.md  EXPERIMENT_TRACKING.md  GUARDRAILS.md  HYPERPARAMETER_SWEEPS.md  README.md
docs/ml/: AUDIO_PIPELINE.md  ENGINES.md  TTS.md
docs/plans/: roadmap-parity-batch.md  sota-consolidation.md  sota-full-scoreboard-automation.md  stage3-model-scaling.md  terminology-easy-advanced.md  tts-benchmark-harness.md  ui-parity-sweep.md
docs/product/: PRODUCT_ASSESSMENT_2026-07-06.md
docs/reports/: ASR_training_GUI_wizard_research_and_design_2026-06-27.md
docs/roadmap/: ROADMAP.md  ROADMAP_STATUS.md
docs/sota-benchmarks/: BASELINES.md  DOMAINS.md  METHODOLOGY.md  README.md  SCOREBOARD.json  SCOREBOARD.md  VALIDATION.md
docs/testing/: journey-s1-real-audio-baseline.md  journey-s2-finetune-spike.md
experiments/: e01_real_audio_baseline.yaml  e02_lora_finetune_spike.yaml
plans/: advanced-mode-ui-sweep.md  roadmap-parity-batch.md  terminology-easy-advanced.md  tts-benchmark-harness.md  ui-parity-sweep.md
project/docs/: ACCESSIBILITY.md  ALIGNMENT.md  AUDIO_PIPELINE.md  BENCHMARKING.md  BUNDLING.md  CALIBRATION.md  CLOUD_FALLBACK.md  COMPETITIVE_GAPS.md  DECISIONS.md  DENOISE.md  DEPENDENCIES.md  DIARIZATION.md  ENGINES.md  EXPORT.md  FORMATS.md  I18N.md  LANDSCAPE.md  LANGUAGES.md  LEARNINGS.md  MASCOT.md  MODEL_PACKS.md  MULTIGPU.md  OBSERVABILITY.md  PHASE0_STATUS.md  PLAN.md  PROMPTS.md  README.md  RELEASING.md  ROADMAP.md  ROADMAP_STATUS.md  SIDECAR.md  THIRD_PARTY.md  VOCAB.md
reports/: ASR_training_GUI_wizard_research_and_design_2026-06-27.md
scripts/: _sidecar_entry.py  benchmark.py  build_sidecar.py  calibrate.py  full_report.sh  gen_credits.py  make_toy_dataset.py  pack_model.py
scripts/journey/: s2_finetune_whisper_small.py  s2_spike.py
scripts/sota/: common.py  download_data.sh  run_all.sh  validate_d01_wer_clean.py  validate_d02_wer_spontaneous.py  validate_d03_train_efficiency.py  validate_d04_rtf.py  validate_d05_data_efficiency.py  validate_d06_noise_robustness.py  validate_d10_decoding.py  (+8 more)
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: .prettierignore  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
(+62 files in other folders)
