[project]
name = "talkteach-backend"
version = "0.0.1"
description = "TalkTeach job server — child-proof, zero-config ASR training backend (Phase 0)"
# Canonical README lives at the repo root (../README.md); not referenced here so
# sdist builds don't depend on a path outside this project directory.
requires-python = ">=3.10"
# Light deps: enough to run the director, audio quality/sufficiency logic, the
# data layer, and the FastAPI job server WITHOUT any GPU or ML framework.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Heavy ML deps, import-guarded everywhere. Installed only when actually training
# or running inference. The backend imports and serves non-ML endpoints without them.
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "faster-whisper>=1.0",
    "soundfile>=0.12",
    "librosa>=0.10",
    "jiwer>=3.0",         # WER/CER for the real smartness meter (roadmap #2)
]
export = [
    "ctranslate2>=4.0",
    "onnxruntime>=1.17",
]
# Heavier optional capability extras (kept separate so the base stays light).
vad = ["silero-vad>=5.0"]          # Silero VAD trim/segment (roadmap #11)
denoise = ["deepfilternet>=0.5"]   # optional noise cleanup (roadmap #30)
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talkteach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Markers for paths that need heavy deps / network / a GPU and so are opt-in
# (see DECISIONS.md D-002). Default `pytest -q` skips none of the light tests.
markers = [
    "integration: end-to-end run needing [ml] deps + network/GPU (opt-in)",
    "ffmpeg: needs the ffmpeg binary on PATH (opt-in)",
]

# --- Lint / format (ruff) -----------------------------------------------------
# Single fast tool replacing flake8/isort/black/pyupgrade (DECISIONS.md D-009).
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# B905: zip(strict=) is 3.10+; we target 3.10 so it's fine, but a few legacy
# call sites pre-date it — left as a follow-up rather than a churn now.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import after computing dependency-presence flags so that
# "the import itself is the first assertion" reads top-to-bottom (test_engines).
"tests/*" = ["E402"]

# --- Type checking (mypy) -----------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["talkteach"]
ignore_missing_imports = true   # heavy ML deps are optional + un-stubbed
# `# type: ignore` on guarded ML imports is "unused" or not depending on whether
# the optional dep happens to be installed in the checking environment — so it is
# environment-dependent and must NOT gate CI for this optional-dependency project.
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
# Heavy-dep modules do guarded local imports of untyped libraries; don't fail
# the gate on their dynamic surfaces. The pure director/data/audio core is
# checked strictly.
[[tool.mypy.overrides]]
module = ["talkteach.engines.*", "talkteach.audio.decode", "talkteach.audio.vad"]
disallow_untyped_defs = false
