[project]
name = "talkteach-backend"
version = "0.1.0"
description = "TalkTeach job server — easy-to-use, zero-config ASR training backend (Phase 0)"
license = "GPL-3.0-or-later"
# Canonical README lives at the repo root (../README.md); not referenced here so
# sdist builds don't depend on a path outside this project directory.
requires-python = ">=3.10"
# Light deps: enough to run the director, audio quality/sufficiency logic, the
# data layer, and the FastAPI job server WITHOUT any GPU or ML framework.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Heavy ML deps, import-guarded everywhere. Installed only when actually training
# or running inference. The backend imports and serves non-ML endpoints without them.
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",     # 🤗 Dataset for the real fine-tune loop (roadmap #1)
    "faster-whisper>=1.0",
    "soundfile>=0.12",
    "librosa>=0.10",
    "jiwer>=3.0",         # WER/CER for the real smartness meter (roadmap #2)
]
export = [
    "ctranslate2>=4.0",
    "onnxruntime>=1.17",
    "optimum[onnxruntime]>=1.20",   # ONNX export for wav2vec2/Whisper (benchmark)
]
# Synthetic speech for testing/benchmarking (roadmap #6). espeak-ng is a *system*
# binary (apt-get install espeak-ng); only the neural piper voice is a pip dep.
tts = ["piper-tts>=1.2"]
# Kyutai Pocket TTS — high-quality neural TTS + voice cloning on CPU (roadmap #6).
# Pulls in torch>=2.5 and ~100M weights on first use. Kept separate from [tts]
# because pocket-tts brings torch (the [tts] group is intentionally torch-free).
pocket-tts = ["pocket-tts>=2.1"]
# NeMo is GPU-only and heavy; isolated so the base/[ml] installs stay light. The
# NeMo engine self-skips without a GPU (see project/docs/BENCHMARKING.md).
nemo = ["nemo_toolkit[asr]>=1.23"]
# Heavier optional capability extras (kept separate so the base stays light).
vad = ["silero-vad>=5.0"]          # Silero VAD trim/segment (roadmap #11)
denoise = ["deepfilternet>=0.5"]   # optional noise cleanup (roadmap #30)
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
# Headless CLI (#54): train / eval / export / import / subtitle / augment.
talkteach = "talkteach.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talkteach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Markers for paths that need heavy deps / network / a GPU and so are opt-in
# (see project/docs/DECISIONS.md D-002). Default `pytest -q` skips none of the light tests.
markers = [
    "integration: end-to-end run needing [ml] deps + network/GPU (opt-in)",
    "ffmpeg: needs the ffmpeg binary on PATH (opt-in)",
    "espeak: needs the espeak-ng binary on PATH + [ml] (benchmark fast-path, opt-in)",
]
# Starlette's TestClient emits a deprecation about httpx (roadmap #42). It's a
# test-only transport detail we don't control; silence the noise so a real
# warning stands out. Tracked in project/docs/DEPENDENCIES.md. audioop is a stdlib
# module the TTS resampler uses on 3.10–3.12 (numpy fallback on 3.13+); its
# deprecation is expected and not actionable here.
filterwarnings = [
    "ignore:Using `httpx`:DeprecationWarning",
    "ignore:Using `httpx`:UserWarning",
    "ignore:'audioop' is deprecated:DeprecationWarning",
]

# --- Lint / format (ruff) -----------------------------------------------------
# Single fast tool replacing flake8/isort/black/pyupgrade (project/docs/DECISIONS.md D-009).
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# B905: zip(strict=) is 3.10+; we target 3.10 so it's fine, but a few legacy
# call sites pre-date it — left as a follow-up rather than a churn now.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import after computing dependency-presence flags so that
# "the import itself is the first assertion" reads top-to-bottom (test_engines).
"tests/*" = ["E402"]

# --- Type checking (mypy) -----------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["talkteach"]
ignore_missing_imports = true   # heavy ML deps are optional + un-stubbed
# `# type: ignore` on guarded ML imports is "unused" or not depending on whether
# the optional dep happens to be installed in the checking environment — so it is
# environment-dependent and must NOT gate CI for this optional-dependency project.
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
# Heavy-dep modules do guarded local imports of untyped libraries; don't fail
# the gate on their dynamic surfaces. The pure director/data/audio core is
# checked strictly.
[[tool.mypy.overrides]]
module = ["talkteach.engines.*", "talkteach.audio.decode", "talkteach.audio.vad"]
disallow_untyped_defs = false

# The real-training wrappers are thin shims over torch/transformers/peft whose
# stubs are incomplete and rename APIs across versions (e.g. tokenizer →
# processing_class, evaluation_strategy → eval_strategy; TrainingArguments rejects
# a **dict[str, object]). They are verified by the `integration`/benchmark tests,
# not the type checker; don't gate CI on their dynamic surface.
[[tool.mypy.overrides]]
module = ["talkteach.engines._whisper_train", "talkteach.engines._wav2vec2_train"]
ignore_errors = true
