[package]
name = "talkteach"
version = "0.1.0"
description = "TalkTeach — a child-proof speech-recognition training app"
authors = ["TalkTeach"]
edition = "2021"
rust-version = "1.77"

# The Tauri shell. Phase 0 is a thin window around the Svelte UI; Phase 1 will
# spawn the Python FastAPI backend as a sidecar (see src/main.rs).

[lib]
name = "talkteach_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talkteach"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
