[package]
name = "talkteach"
version = "0.1.0"
description = "TalkTeach — a child-proof speech-recognition training app"
authors = ["TalkTeach"]
edition = "2021"
rust-version = "1.77"

# The Tauri shell. Spawns the Python FastAPI backend as a sidecar so the user
# never starts a server (see src/lib.rs and project/docs/SIDECAR.md).

[lib]
name = "talkteach_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talkteach"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"   # spawn the Python backend as a sidecar (roadmap #15)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
